edit,show導入,destroy導入途中

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,9 +12,9 @@
     <tr>
       <tb><%= book.title %></tb>
       <tb><%= book.body %></tb>
-      <tb>Show仮</tb>
-      <tb>Edit仮</tb>
-      <tb>Destroy仮</tb>
+      <tb><%= link_to 'Show', "/books/#{book.id}" %></tb>
+      <tb><%= link_to 'Edit', "/books/#{book.id}/edit" %></tb>
+      <tb><%= link_to 'Destroy', book_path(@book.id), method: :delete %></tb>
     </tr>
   </tbody>
 </table>
