--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,14 @@
 <h1>Editing Book</h1>
+
+<%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
+  <h6>Title</h6>
+  <%= f.text_field :title %>
+
+  <h6>Body</h6>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Update Book' %>
+
+  <%= link_to 'Show',  book_path(@book.id) %> | <%= link_to 'Back', '/books' %>
+
+<% end %>
