top,edit,show,indexのclass対応

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,19 @@
-<h2>ようこそ<b>Bookers</b>へ！</h2>
+
 
 <main>
-  <p><b>Bookers</b>では、さまざまな書籍に関するあなたの意見や</br>
-  印象を共有し交換することができます</p>
+  
+  <h2 class="top-title">
+    ようこそ<b>Bookers</b>へ！
+  </h2>
+
+  <div class="top-content">
+    <b>Bookers</b>では、さまざまな書籍に関するあなたの意見や</br>
+    印象を共有し交換することができます
+  </div>
+
+  <div class="edit-rink">
+    <%= link_to 'start', '/books' %>
+  </div>
+
 </main>
 
-<%= link_to 'start', '/books' %>
