--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,25 @@
-<h1>Editing Book</h1>
+<h1 class="edit-title">
+  Editing Book
+</h1>
 
+<main>
 <%= form_with model: @book, url:book_path(@book.id), method: :patch do |f| %>
-  <h6>Title</h6>
-  <%= f.text_field :title %>
+  <h6 class="edit-content-title">Title</h6>
+  <div class="edit-field">
+    <%= f.text_field :title %>
+  </div>
 
-  <h6>Body</h6>
-  <%= f.text_area :body %>
+  <h6 class="edit-content-body">Body</h6>
+  <div class="edit-field">
+    <%= f.text_area :body %>
+  </div>
 
-  <%= f.submit 'Update Book' %>
+  <div class="edit-submit">
+    <%= f.submit 'Update Book' %>
+  </div>
 
-  <%= link_to 'Show',  book_path(@book.id) %> | <%= link_to 'Back', '/books' %>
-
+  <div class="edit-rink">
+    <%= link_to 'Show',  book_path(@book.id) %> | <%= link_to 'Back', '/books' %>
+  </div>
 <% end %>
+</main>
