--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,35 +1,44 @@
 <h1>Books</h1>
+
+<main>
 <% @books.each do |book| %>
-<table class="Books_table">
-  <thead>
-    <tr>
-      <th class="header1">Title</th>
-      <th class="header2">Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <tb><%= book.title %></tb>
-      <tb><%= book.body %></tb>
-      <tb><%= link_to 'Show', "/books/#{book.id}" %></tb>
-      <tb><%= link_to 'Edit', "/books/#{book.id}/edit" %></tb>
-      <tb><%= link_to 'Destroy', book_path(@book.id), method: :delete %></tb>
-    </tr>
-  </tbody>
-</table>
+  <table class="Books-table">
+    <thead>
+      <tr>
+        <th class="header1">Title</th>
+        <th class="header2">Body</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <tb><%= book.title %></tb>
+        <tb><%= book.body %></tb>
+        <tb><%= link_to 'Show', "/books/#{book.id}" %></tb>
+        <tb><%= link_to 'Edit', "/books/#{book.id}/edit" %></tb>
+        <%#<tb><%= link_to 'Destroy', book_path(@book.id), method: :delete </tb>%>
+      </tr>
+    </tbody>
+  </table>
 <% end %>
 
-<h1>New book</h1>
-  <%= form_with model: @book, url: '/books', method: :post do |f| %>
+  <h1 class="books-content">New book</h1>
+<%= form_with model: @book, url: '/books', method: :post do |f| %>
 
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+  <div class="books-content-title">Title</div>
+  <div class="books-field">
+    <%= f.text_field :title %>
+  </div>
 
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+  <div class="books-content-title">Body</div>
+  <div class="books-field">
+    <%= f.text_area :body %>
+  </div>
 
-  <%= f.submit 'Create Book' %>
-
+  <div class="books-submit">
+    <%= f.submit 'Create Book' %>
+  </div>
 
 <% end %>
+</main>
