--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,31 +1,46 @@
-<h1>Books</h1>
+<div class="flash">
+  <%= flash[:notice] %>
+</div>
 
-<main>
-<% @books.each do |book| %>
-  <table class="Books-table">
-    <thead>
-      <tr>
-        <th class="header1">Title</th>
-        <th class="header2">Body</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
+<h1 class="index-title">Books</h1>
 
-    <tbody>
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th></th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @books.each do |book| %>
       <tr>
-        <tb><%= book.title %></tb>
-        <tb><%= book.body %></tb>
-        <tb><%= link_to 'Show', "/books/#{book.id}" %></tb>
-        <tb><%= link_to 'Edit', "/books/#{book.id}/edit" %></tb>
-        <%#<tb><%= link_to 'Destroy', book_path(@book.id), method: :delete </tb>%>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td><%= link_to 'Show', "/books/#{book.id}" %></td>
+        <td><%= link_to 'Edit', "/books/#{book.id}/edit" %>
+        <td><%= link_to 'Destroy', "/books/#{book.id}", method: :delete, "data-confirm" => "Are you sure?" %></td>
       </tr>
-    </tbody>
-  </table>
+    <% end %>
+  </tbody>
+</table>
+
+
+<h1 class="books-content">New book</h1>
+<% if @book.errors.any? %>
+  <div class="error">
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
 
-  <h1 class="books-content">New book</h1>
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
-
   <div class="books-content-title">Title</div>
   <div class="books-field">
     <%= f.text_field :title %>
