--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,109 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.flash {
+  margin: 33px 0px 5px 60px;
+  font-size: 13px;
+  color: #50C878;
+}
+
+// index
+
+h1.index-title {
+  padding: 20px 0px 0px 30px;
+  font-size: 25px;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 8px;
+  padding-left: 33px;
+  margin-top: 0;
+  font-size: 15px;
+}
+
+h1.book-content {
+  font-size: 22px;
+  padding: 10px 0px 10px 30px;
+}
+
+.index-field-title {
+  padding-left: 33px;
+  font-size: 13px;
+}
+
+.index-field {
+  font-size: 13px;
+  padding: 0px 0px 10px 33px;
+}
+
+.index-submit {
+  padding-left: 33px;
+}
+
+.error {
+  width: 450px;
+  height: 150px;
+  border: 2px solid red;
+  padding: 7px 7px 0px;
+  margin-bottom: 20px;
+  margin-left: 33px;
+  background-color: #F0E0E0;
+
+  h2 {
+    text-align: left;
+    padding: 5px 5px 5px 15px;
+    font-size: 12px;
+    margin: -7px -7px 0;
+    background-color: #c00;
+    color: #fff;
+  }
+
+  ul li {
+    font-size: 12px;
+    margin: 20px;
+  }
+}
+// edit
+
+h1.edit-title {
+  padding: 0px 0px 5px 30px;
+  font-size: 25px;
+}
+
+.edit-content-title {
+  padding-left: 30px;
+  font-size: 13px;
+
+}
+
+.edit-field {
+   padding: 0px 0px 10px 30px;
+}
+
+.edit-submit {
+  padding-left: 30px;
+}
+
+.edit-link {
+  padding: 5px 0px 0px 30px ;
+  font-size: 13px;
+}
+
+// show
+
+.show-content {
+  padding: 10px 0px 15px 60px ;
+  font-size: 13px;
+}
+
+.show-link {
+  padding: 10px 0px 0px 30px ;
+  font-size: 13px;
+}
