--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.top-title {
+  padding: 30px 30px 10px 30px;
+}
+
+.top-content {
+  line-height: 50px;
+  padding-left: 60px;
+  font-size: 13px;
+}
+
+.edit-rink {
+  padding: 10px 0px 0px 60px;
+  font-size: 13px;
+}
