--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,23 +15,22 @@
   </thead>
 
   <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title %></td>
-        <td><%= book.body %></td>
-        <td><%= link_to 'Show', "/books/#{book.id}" %></td>
-        <td><%= link_to 'Edit', "/books/#{book.id}/edit" %>
-        <td><%= link_to 'Destroy', "/books/#{book.id}", method: :delete, "data-confirm" => "Are you sure?" %></td>
-      </tr>
-    <% end %>
+  <% @books.each do |book| %>
+        <tr>
+          <td class="index-content-title"><%= book.title %></td>
+          <td class="index-content-title"><%= book.body %></td>
+          <td class="index-rink"><%= link_to 'Show', book_path(book.id) %></td>
+          <td class="index-rink"><%= link_to 'Edit', edit_book_path(book.id) %>
+          <td class="index-rink"><%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        </tr>
+  <% end %>
   </tbody>
 </table>
 
-
-<h1 class="books-content">New book</h1>
+<h1 class="book-content">New book</h1>
 <% if @book.errors.any? %>
   <div class="error">
-    <%= @book.errors.count %> errors prohibited this book from being saved:
+    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
     <ul>
       <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -41,17 +40,17 @@
 <% end %>
 
 <%= form_with model: @book, url: '/books', method: :post do |f| %>
-  <div class="books-content-title">Title</div>
-  <div class="books-field">
+  <div class="index-field-title">Title</div>
+  <div class="index-field">
     <%= f.text_field :title %>
   </div>
 
-  <div class="books-content-title">Body</div>
-  <div class="books-field">
+  <div class="index-field-title">Body</div>
+  <div class="index-field">
     <%= f.text_area :body %>
   </div>
 
-  <div class="books-submit">
+  <div class="index-submit">
     <%= f.submit 'Create Book' %>
   </div>
 
